[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="0.21.0", features=["csr"]}
wasm-bindgen = "0.2"  # or the latest version
wasm-bindgen-futures = "0.4"  # optional, for async support
web-sys = { version = "0.3", features = ["Window"] }  # or the latest version

