[package]
name = "yew_online_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="0.21.0", features=["csr"]}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"  
web-sys = { version = "0.3.70", features = ["HtmlInputElement"] }  
gloo = "0.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
stylist = {version="0.13.0", features=["yew"]}

